Expose the 'Slide Show' plugin from the Macro Interpreter
The Macro Interpreter adds a command 'show' which does not work
otherwise.

Noticed by Jan Eglinger in bug 474.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -4,3 +4,4 @@
 
 Plugins>Scripting, "Macro Interpreter", CLI.CLI_
 Plugins>Scripting, "Refresh Macros", CLI.Refresh_Macros
+Plugins>Utilities, "Slide Show", CLI.Slide_Show
