--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 		</dependency>
 	</dependencies>
 
+	<scm>
+		<connection>scm:git:git://github.com/fiji/CLI</connection>
+		<developerConnection>scm:git:git@github.com:fiji/CLI</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/fiji/CLI</url>
+	</scm>
+
 	<repositories>
 		<!-- NB: for project parent, in case of partial checkout -->
 		<repository>
