Add missing CI information

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 		</dependency>
 	</dependencies>
 
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://jenkins.imagej.net/job/CLI/</url>
+	</ciManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/CLI</connection>
 		<developerConnection>scm:git:git@github.com:fiji/CLI</developerConnection>
